33-NetworkPolicies/manifests/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: netpol-backend
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
